# vvasp

./: README.md  pyproject.toml
assets/: Allen.csv  Beryl.csv  Cosmos.csv  channel_locations_demo.npy
meshes/: logo.stl  np1_freely_moving.stl  np1_head_fixed.stl  np2_freely_moving.stl  np2_head_fixed.stl  np2a_freely_moving.stl  np2a_head_fixed.stl
notebooks/: make_histology_traces_movie.ipynb  show_trajectories.ipynb  view_2d_slices.ipynb  viz_helpers.py  volume_render.ipynb
vvasp/: BaseVizClasses.py  VizClasses.py  __init__.py  atlas.py  atlas_utils.py  base_viz_objects.py  cli.py  default_prefs.py  io.py  manipulators.py  probe.py  utils.py  viz_objects.py  widgets.py
