[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vvasp"
authors = [
  {name="Max Melin", email="mmelin@ucla.edu"},
  {name="Joao Couto", email="jpcouto@gmail.com" },
]
description = "Volume Visualization and Stereotaxic Planning"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
	     "pyvista",
	     "pyvistaqt",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/spkware/vvasp"
Issues = "https://github.com/spkware/vvasp/issues"

[project.scripts]
vvasp = "vvasp.cli:main"

[tool.setuptools.packages.find]
where = ["."] 
include = ["vvasp"]
namespaces = false  # disable PEP 420 namespaces

[tool.setuptools.dynamic]
version = {attr = "vvasp.VERSION"}
